# Info0402-TP6

./: CMakeLists.txt  Color.cpp  Color.hpp  Disc.cpp  Disc.hpp  FillProperty.cpp  FillProperty.hpp  Geom2D.cpp  Geom2D.hpp  Makefile  Point.cpp  Point.hpp  PointsArray.cpp  PointsArray.hpp  ReallocatablePointsArray.cpp  ReallocatablePointsArray.hpp  SVGstream.cpp  SVGstream.hpp  Surface.cpp  Surface.hpp  TP6.cpp  Transform.hpp
